# slow-scan-print

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
language/: en-US.yml  opencc.sh  zh-CN.yml  zh-HK.yml  zh-TW.yml
locales/: en-US.toml  zh-CN.toml
src/: args.rs  input.rs  lib.rs  main.rs  output.rs
