[package]
name = "slow-scan-print"
version = "1.2.1"
authors = ["Meow0x7E <Meow0x7E@outlook.com>"]
edition = "2024"
description = "Text is printed at fixed intervals by character or by line, and its name is inspired by SSTV (Slow Scan TV)."
license = "MIT"
repository = "https://github.com/Meow0x7E/slow-scan-print"
categories = ["command-line-interface", "command-line-utilities"]


[dependencies]
console = "0.15.8"
ctrlc = { version = "3.4.5", features = ["termination"] }
line-ending = "1.5.1"
once_cell = "1.21.3"
rust-i18n = "3.1.2"
sys-locale = "0.3.2"
utf8-chars = "3.0.5"
unicode-width = "0.2.0"
chain-reader = "0.1.0"

[dependencies.clap]
version = "4.5.7"
default-features = false
features = [
    "std",           # Not Currently Used. Placeholder for supporting no_std environments in a backwards compatible manner.
    "color",         # Turns on terminal styling of help and error messages. See Command::styles to customize this.
    "usage",         # Auto-generate usage
    "error-context", # Include contextual information for errors (which arg failed, etc)
    "suggestions",   # Turns on the Did you mean '--myoption'? feature for when users make typos.
    "cargo",         # Turns on macros that read values from CARGO_* environment variables.
    "unicode",       # Turns on support for unicode characters (including emoji) in arguments and help messages.
    "wrap_help",     # Turns on the help text wrapping feature, based on the terminal size.
]

[dependencies.duration-str]
version = "0.17.0"
default-features = false
features = ["calc", "cn_unit", "lowercase"]

[profile.release]
strip = true
lto = true
codegen-units = 1


[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en-US", "zh-CN", "zh-TW", "zh-HK"]

# The default locale, default: "en".
default-locale = "zh-CN"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "language"
